--- a/MOBILE/html/new/orderSheet_member.html
+++ b/MOBILE/html/new/orderSheet_member.html
@@ -368,7 +368,7 @@
 
                 <h3 class="user_title distance">할인 정보</h3>
                 <div class="user_table_wrap">
-                    <table class="table_wrap type_1">
+                    <table class="table_wrap type_1 sorts">
                         <colgroup> 
                             <col width="100%" />                     
                         </colgroup>
