--- a/MOBILE/html/new/popup_deposit.html
+++ b/MOBILE/html/new/popup_deposit.html
@@ -34,7 +34,8 @@
 	    <div class="inner"> <a href="#n" class="btn_home" _onclick="location.href='http://devm.hottracks.co.kr/';return false;">홈버튼</a>       
 	      <!-- 서브 -->
 	      <div class="sub_wrap">
-	       	<h2 class="head_title">최근 배송지 주소</h2>
+	       <!-- <a href="#n" _onclick="locBack();return false;" class="btn_back">뒤로가기</a> -->
+	       	<h2 class="head_title">교보핫트랙스 온라인 예치금 안내</h2>
             <a href="javascript:;" class="btn_cls">닫기</a>
 	      </div>
 	      <!--// 서브 --> 
@@ -42,44 +43,27 @@
 	  </div>
 	<!-- //#header -->
 
-	<!-- content -->
-	<div id="content" class="orderandpay active">
+	<style>
+		
+		
+	</style>
 
-		<div class="pull_box last_address_wrap">
-			<ul class="last_address_list">
-				<li>
-					<div class="choice_wrap">
-                        <input type="radio" name="orderInfo000" id="orderInfo_111" value="Y">
-                        <label for="orderInfo_111">
-                        	<div class="last_address_name">하태경</div>
-                        	<div class="last_address_phone">010-2365-8956</div>
-                        	<div class="last_address">서울특별시 은평구 은평로 11-1 (신사동) 은평노블리안 1105호 (24582)</div>
-                        </label>
-                    </div>
-				</li>
-				<li>
-					<div class="choice_wrap">
-                        <input type="radio" name="orderInfo000" id="orderInfo_112" value="Y">
-                        <label for="orderInfo_112">
-                        	<div class="last_address_name">하태경</div>
-                        	<div class="last_address_phone">010-2365-8956</div>
-                        	<div class="last_address">서울특별시 은평구 은평로 11-1 (신사동) 은평노블리안 1105호 (24582)</div>
-                        </label>
-                    </div>
-				</li>
-				<li>
-					<div class="choice_wrap">
-                        <input type="radio" name="orderInfo000" id="orderInfo_113" value="Y">
-                        <label for="orderInfo_113">
-                        	<div class="last_address_name">하태경</div>
-                        	<div class="last_address_phone">010-2365-8956</div>
-                        	<div class="last_address">서울특별시 은평구 은평로 11-1 (신사동) 은평노블리안 1105호 (24582)</div>
-                        </label>
-                    </div>
-				</li>
-			</ul>
-			<p class="alert_txt">배송지 주소 목록은 최근에 배송한 주소 지역 5개만 노출됩니다.</p>
-		</div>
+
+    
+	<!-- content -->
+	<div id="content">
+
+		<div class="tooltip_wrap ">
+            <div class="tooltip_inner">
+            	<p class="tooltip_tit">교보핫트랙스 온라인 예치금 안내</p>
+            	<ul class="tooltip_list">
+                    <li>교보핫트랙스 온라인 예치금은 결제 후 환불, 배송비 정산 등으로 발생한 금액입니다.</li>
+                    <li>개인 정보 보호를 위해 회원님께서 직접 환불 접수해주실 때까지 환불 금액을 임시로 보관해드리고 있습니다.</li>
+                    <li>예치금은 핫트랙스 온라인몰에서만 사용 가능하며, 은행 계좌로 환불받으실 수 있습니다.</li>
+                    <li>휴대폰, 신용카드 등으로 결제 시 입금 확인 시간이 소요되어 환불 처리가 다소 지연될 수 있습니다.</li>
+                </ul>
+            </div>
+        </div>
 		
 	</div>
 	<!--// content -->
