--- a/MOBILE/path_now.html
+++ b/MOBILE/path_now.html
@@ -848,7 +848,7 @@ th.row-headers-background {
       <tr style='height:29px;'>
         <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">5</div></th>
         <td class="s14"></td>
-        <td class="s15" dir="ltr" rowspan="8">#Order<br>
+        <td class="s15" dir="ltr" rowspan="13">#Order<br>
           (주문/결제)</td>
         <td class="s16" rowspan="2">장바구니</td>
         <td class="s16" dir="ltr">장바구니 담았을 때</td>
@@ -875,7 +875,7 @@ th.row-headers-background {
       <tr style='height:29px;'>
         <th id="2024277320R6" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">7</div></th>
         <td class="s14"></td>
-        <td class="s16" rowspan="4">주문서 작성 (주문결제)</td>
+        <td class="s16" rowspan="9">주문서 작성 (주문결제)</td>
         <td class="s16">비회원</td>
         <td class="s10"></td>
         <td class="s16"></td>
@@ -894,7 +894,7 @@ th.row-headers-background {
         <td class="s17"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/orderSheet_member.html">http://devm.hottracks.co.kr/html/new/orderSheet_member.html</a></td>
         <td class="s19" dir="ltr">완료</td>
-        <td class="s16">안심번호사용안내, 포인트조회, 예치금 팝업 </td>
+        <td class="s16"></td>
         <td class="s4"></td>
       </tr>
       <tr style='height:29px;'>
@@ -917,6 +917,66 @@ th.row-headers-background {
         <td class="s16"></td>
         <td class="s17"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/popup_coupon_list.html">http://devm.hottracks.co.kr/html/new/popup_coupon_list.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style="height:29px;">
+        <th id="2024277320R7" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">8</div></th>
+        <td class="s14"></td>
+        <td class="s16">예치금 팝업</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/popup_deposit.html">http://devm.hottracks.co.kr/html/new/popup_deposit.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style="height:29px;">
+        <th id="2024277320R7" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">8</div></th>
+        <td class="s14"></td>
+        <td class="s16">안심번호사용안내 팝업</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/popup_safety_info.html">http://devm.hottracks.co.kr/html/new/popup_safety_info.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style="height:29px;">
+        <th id="2024277320R7" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">8</div></th>
+        <td class="s14"></td>
+        <td class="s16">gs 포인트 조회 팝업</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/popup_point_gs.html">http://devm.hottracks.co.kr/html/new/popup_point_gs.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style="height:29px;">
+        <th id="2024277320R7" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">8</div></th>
+        <td class="s14"></td>
+        <td class="s16">lp 포인트 조회 팝업</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/popup_point_lp.html">http://devm.hottracks.co.kr/html/new/popup_point_lp.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style="height:29px;">
+        <th id="2024277320R7" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">8</div></th>
+        <td class="s14"></td>
+        <td class="s16">ok캐시백 포인트 조회 팝업</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/popup_point_ok.html">http://devm.hottracks.co.kr/html/new/popup_point_ok.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
