--- a/MOBILE/html/new/orderSheet.html
+++ b/MOBILE/html/new/orderSheet.html
@@ -527,13 +527,9 @@
                                 <td>
                                     <div class="choice_wrap have_inner_txt between_space">
                                         <!-- 한개만 사용시 class="f_r" 넣어주세요 -->
-                                        <div class="choice_wrap_inner f_l">
-                                            <input type="radio" name="orderInfo1" id="orderInfo_11" value="Y" checked="" />
-                                            <label for="orderInfo_11">주문자 정보와 동일</label>
-                                        </div>
                                         <div class="choice_wrap_inner f_r">
-                                            <input type="radio" name="orderInfo1" id="orderInfo_12" value="N" />
-                                            <label for="orderInfo_12">최근 배송지</label>
+                                            <input type="checkbox" name="orderInfo22222" id="orderInfo_144" />
+                                            <label for="orderInfo_144">주문자 정보와 동일</label>
                                         </div>
                                     </div>
                                 </td>                                  
