--- a/PC/html/new/popupBulkList.html
+++ b/PC/html/new/popupBulkList.html
@@ -15,8 +15,7 @@
         <link rel="stylesheet" type="text/css" href="../../css/biz/common_v2.css">
         <link rel="stylesheet" type="text/css" href="../../css/biz/hottweb_yj.css">
         <link rel="stylesheet" type="text/css" href="../../css/biz/slick.css">
-        <link
-        rel="stylesheet" type="text/css" href="../../pages/html/css/shop.css">
+        <link rel="stylesheet" type="text/css" href="../..//css/shop.css">
         <!-- 20.12.28 -->
         <link rel="stylesheet" type="text/css" href="../../css/new/orderandpay.css">
         <script type="text/javascript" src="../../js/jquery-1.9.1.min.js"></script>
