외주작업 받고 정리 후

--- a/MOBILE/html/new/search_layer.html
+++ b/MOBILE/html/new/search_layer.html
@@ -45,62 +45,38 @@
 		<ul class="search_result_list">
 			<li>
 				<a href="javascript:;" class="link">
-					<span class="point02">라미</span>
-					<span>만년필</span>
+					<div>
+						<p><span>[디자인문구 | 필기구]</span> <span class="point02">라미</span> <span>그라파이어 리뉴얼	대한민국 & 독일 수교 20주년 한정판</span></p>
+						<p class="price">25,000원</p>
+					</div>
+					<div class="thum"><img src="../../images/biz/thums/img_main08.png" alt=""></div>
 				</a>
 			</li>
 			<li>
 				<a href="javascript:;" class="link">
-					<span class="point02">라미</span>
-					<span>펜</span>
+					<div>
+						<p><span>[디자인문구 | 필기구]</span> <span class="point02">라미</span> <span>그라파이어 리뉴얼</span></p>
+						<p class="price">25,000원</p>
+					</div>
+					<div class="thum"><img src="../../images/biz/thums/img_main08.png" alt=""></div>
 				</a>
 			</li>
 			<li>
 				<a href="javascript:;" class="link">
-					<span class="point02">라미</span>
-					<span>샤프</span>
+					<div>
+						<p><span>[디자인문구 | 필기구]</span> <span class="point02">라미</span> <span></span></p>
+						<p class="price">25,000원</p>
+					</div>
+					<div class="thum"><img src="../../images/biz/thums/img_main08.png" alt=""></div>
 				</a>
 			</li>
 			<li>
 				<a href="javascript:;" class="link">
-					<span class="point02">라미</span>
-					<span>사파리한정판</span>
-				</a>
-			</li>
-			<li>
-				<a href="javascript:;" class="link">
-					<span class="point02">라미</span>
-					<span>만년필</span>
-				</a>
-			</li>
-			<li>
-				<a href="javascript:;" class="link">
-					<span class="point02">라미</span>
-					<span>펜</span>
-				</a>
-			</li>
-			<li>
-				<a href="javascript:;" class="link">
-					<span class="point02">라미</span>
-					<span>샤프</span>
-				</a>
-			</li>
-			<li>
-				<a href="javascript:;" class="link">
-					<span class="point02">라미</span>
-					<span>사파리한정판</span>
-				</a>
-			</li>
-			<li>
-				<a href="javascript:;" class="link">
-					<span class="point02">라미</span>
-					<span>샤프</span>
-				</a>
-			</li>
-			<li>
-				<a href="javascript:;" class="link">
-					<span class="point02">라미</span>
-					<span>사파리한정판</span>
+					<div>
+						<p><span>[디자인문구 | 필기구]</span> <span class="point02">라미</span> <span>그라파이어 리뉴얼	</span></p>
+						<p class="price">25,000원</p>
+					</div>
+					<div class="thum"><img src="../../images/biz/thums/img_main08.png" alt=""></div>
 				</a>
 			</li>
 		</ul>
@@ -110,14 +86,14 @@
 	<!-- content -->
 	<div id="content" class="mt0">
 
-		
-		
+
+
 	</div>
 	<!--// content -->
 
-	
 
-	
+
+
 	<!-- app bar -->
 	<div id="app_bar">
 		<a href="../biz/main01.html" class="btn_home">HOTTRACKS</a>
