--- a/MOBILE/html/new/search_view.html
+++ b/MOBILE/html/new/search_view.html
@@ -59,7 +59,7 @@
 		<a href="#none" class="btn_back">뒤로가기</a>
 		<a href="#none" class="btn_search"><span>검색</span></a>
 	</div>
-	
+
 	<div class="search_wrap">
 		<div class="search_view">
 			<div class="top_tag">
@@ -74,6 +74,25 @@
 						<div class="swiper-slide"><a href="#none">아이스텀블러</a></div>
 					</div>
 				</div>
+			</div>
+			<!-- 검색결과 실패 -->
+			<div class="fail_search">
+				<h5 class="fail_search_tit mgt10">일치되는 검색결과를 찾을 수 없습니다</h5>
+			</div>
+			<div class="about_search">
+				<h5 class="search_tit mgt10">혹시,<br/>이런 키워드는 어떠세요?</h5>
+				<ul class="with_word">
+					<li>다이어리</li>
+					<li>필통</li>
+					<li>스티커</li>
+					<li>키링</li>
+					<li>디즈니</li>
+					<li>다이어리</li>
+					<li>필통</li>
+					<li>스티커</li>
+					<li>키링</li>
+					<li>디즈니</li>
+				</ul>
 			</div>
 			<div class="cont01">
 				<div class="swiper-container">
@@ -128,7 +147,7 @@
 					<div class="swiper-scrollbar"></div>
 				</div>
 			</div>
-			
+
 
 			<div class="category_wrap cont03">
 				<!-- 제품 -->
