--- a/MOBILE/html/new/cart_nodata.html
+++ b/MOBILE/html/new/cart_nodata.html
@@ -150,12 +150,14 @@ jQuery(function($) {
 	</div>
 	
     <!-- 무료배송 배너-->
-    <div class="pt10 bg_f5f6f1">
+    <div id="evnetBannerArea" class=" " style=""> <a class="wd100" href="#n"> <img src="http://image.kyobobook.co.kr/newimages/giftshop_new/event/banner/65004_750_250.jpg" style="width:100%;" alt="ban_event"> </a> </div>
+    
+    <div class=" ">
         <a class="wd100" href="#n"><img style="width:100%;" class="MB_CART_1" src="http://image.kyobobook.co.kr/newimages/giftshop_new/event/banner/bnr_freedelivery_cart.png" alt="무료배송"></a>
     </div>
 
 	<!-- 장바구니 상품이 없을 때 -->
-		<div class="bg_f5f6f1">
+		<div class="">
             <h2 class="tit_h2 pt40 t_c f_normal">장바구니에 담은 상품이 없습니다.</h2>
             <div class="btn_area box_flex pt40 pb40">
                 <a href="#n" class="bt_bbgb">계속 쇼핑하기</a>
