--- a/MOBILE/html/new/orderComplete.html
+++ b/MOBILE/html/new/orderComplete.html
@@ -57,26 +57,33 @@
 		<h2 class="tit_h2">주문완료</h2>
 	</div>
 	<div class="cartlist">
-	<div class="cong_msg pd20">
-		<p>
-			<strong class="tit col_red">감사합니다.</strong>
-		</p>
-		<p class="line mt5">
-			<strong class="col_black"></strong> 회원님의 주문이 완료되었습니다.
-		</p>
-		주문번호 : 191203000003<span class="col_black"></span>
-	</div>
+		<div class="cong_msg pd20">
+			<p>
+				<strong class="tit col_red">감사합니다.</strong>
+			</p>
+			<p class="line mt5">
+				<strong class="col_black"></strong> 회원님의 주문이 완료되었습니다.
+			</p>
+			주문번호 : <span class="only_english bold">191203000003</span><span class="col_black"></span>
+		</div>
 
-	<div class="box_flex mt30 mb30">
-		<a href="#n" class="bt_bbrb">마이핫트랙스</a>
-		<a href="#n" class="ml10 bt_bbgb">계속 쇼핑하기</a>
-	</div>
-	</div>
+		<div class="wd100" id="evnetBannerArea">
+		    <a class="wd100" href="#n">
+		        <img class="wd100" src="../../images/new/@img_01.png" alt="쿠폰이벤트">
+		    </a>
+		</div>
 
-	<div class="wd100" id="evnetBannerArea">
-	    <a class="wd100" href="#n">
-	        <img class="wd100" src="http://image.kyobobook.co.kr/newimages/giftshop_new/event/banner/bnr_02.jpg" alt="쿠폰이벤트">
-	    </a>
+		<div class="box_flex mt30 mb30">
+			<a href="#n" class="bt_bbrb">마이핫트랙스</a>
+			<a href="#n" class="ml10 bt_bbgb">계속 쇼핑하기</a>
+		</div>
+
+		<div class="wd100" id="evnetBannerArea">
+		    <a class="wd100" href="#n">
+		        <img class="wd100" src="../../images/new/@img_02.png" alt="쿠폰이벤트">
+		    </a>
+		</div>
+
 	</div>
 
     </div>
