--- a/MOBILE/html/new/orderComplete_bank.html
+++ b/MOBILE/html/new/orderComplete_bank.html
@@ -62,7 +62,13 @@
 		<p class="line mt5">
 			<strong class="col_black"></strong> 회원님의 주문이 완료되었습니다.
 		</p>
-		주문번호 : 191203000003<span class="col_black"></span>
+		주문번호 : <span class="only_english bold">191203000003</span><span class="col_black"></span>
+	</div>
+
+	<div class="wd100" id="evnetBannerArea">
+	    <a class="wd100" href="#n">
+	        <img class="wd100" src="../../images/new/@img_01.png" alt="쿠폰이벤트">
+	    </a>
 	</div>
 	
 	<div class="roundbox bg_white f16">
