--- a/PC/html/new/cart_nodata.html
+++ b/PC/html/new/cart_nodata.html
@@ -162,7 +162,7 @@ $(document).ready(function(){
 <h2 class="hidden_obj">장바구니</h2>
 
 <!-- 이벤트 배너 영역 -->
-<div class="mgt10" id="evnetBannerArea" style="display: none;">
+<div class="mgt10" id="evnetBannerArea">
     <a href="#n">
     	<img src="http://image.kyobobook.co.kr/newimages/giftshop_new/event/banner/banner_20190830_950.jpg" alt="ban_event">
     </a>
