--- a/PC/path_now.html
+++ b/PC/path_now.html
@@ -835,7 +835,7 @@ th.row-headers-background {
       <tr style='height:29px;'>
         <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">5</div></th>
         <td class="s14"></td>
-        <td class="s15" dir="ltr" rowspan="7">#Order<br>
+        <td class="s15" dir="ltr" rowspan="8">#Order<br>
           (주문/결제)</td>
         <td class="s16" rowspan="2">장바구니</td>
         <td class="s16" dir="ltr">장바구니 담았을 때</td>
@@ -862,7 +862,7 @@ th.row-headers-background {
       <tr style='height:29px;'>
         <th id="2024277320R6" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">7</div></th>
         <td class="s14"></td>
-        <td class="s16" rowspan="3">주문서 작성 (주문결제)</td>
+        <td class="s16" rowspan="4">주문서 작성 (주문결제)</td>
         <td class="s16">비회원</td>
         <td class="s10"></td>
         <td class="s16"></td>
@@ -881,7 +881,7 @@ th.row-headers-background {
         <td class="s17"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/html/new/orderSheet_member.html">http://dev.hottracks.co.kr/html/new/orderSheet_member.html</a></td>
         <td class="s19" dir="ltr">완료</td>
-        <td class="s16"> 예치금, 안심번호 안내, 쿠폰변경 팝업</td>
+        <td class="s16"> 예치금, 안심번호 안내,최근 배송지주소,  윈도우 - 쿠폰변경 팝업</td>
         <td class="s4"></td>
       </tr>
       <tr style='height:29px;'>
@@ -892,6 +892,18 @@ th.row-headers-background {
         <td class="s16"></td>
         <td class="s17"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/html/new/popupCouponList.html">http://dev.hottracks.co.kr/html/new/popupCouponList.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R7" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">8</div></th>
+        <td class="s14"></td>
+        <td class="s16">최근배송지 주소 </td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/html/new/popupLastAddressList.html">http://dev.hottracks.co.kr/html/new/popupLastAddressList.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -921,7 +933,7 @@ th.row-headers-background {
         <td class="s20"></td>
         <td class="s25"></td>
       </tr>
-      <tr style='height:29px;'>
+     <!--  <tr style='height:29px;'>
         <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;"></div></th>
        <td class="s14"></td>
         <td class="s15" dir="ltr" colspan="9">
@@ -1247,7 +1259,7 @@ th.row-headers-background {
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
-      </tr>
+      </tr> -->
     </tbody>
   </table>
 </div>
