--- a/PC/html/new/cart.html
+++ b/PC/html/new/cart.html
@@ -157,7 +157,11 @@ $(document).ready(function(){
             </div>
             <h2 class="hidden_obj">장바구니</h2>
             <!-- 이벤트 배너 영역 -->
-            <div class="mgt10" id="evnetBannerArea" style="display: none;">
+            <div class="mgt10" id="evnetBannerArea">
+                <a href="#n">
+                <img src="http://image.kyobobook.co.kr/newimages/giftshop_new/event/banner/banner_20190830_950.jpg" alt="ban_event">
+                </a>
+
                 <a href="#n">
                 <img src="http://image.kyobobook.co.kr/newimages/giftshop_new/event/banner/banner_20190830_950.jpg" alt="ban_event">
                 </a>
@@ -169,9 +173,9 @@ $(document).ready(function(){
             <!-- 201222 : 작업부분 -->
             <colgroup>
             <col style="width:5%">
-            <col style="width:10%">
             <col style="width:12%">
-            <col style="width:23%">
+            <col style="width:12%">
+            <col style="width:21%">
             <col style="width:10%">
             <col style="width:12%">
             <col style="width:10%">
@@ -181,7 +185,10 @@ $(document).ready(function(){
             <thead>
             <tr>
                 <th scope="col" class="fir">
-                    <input type="checkbox" name="chkAll" value="cartChk0625" title="핫트랙스 배송 상품 전체 선택" style="-webkit-appearance:checkbox;"/>
+                    <div class="choice_wrap type_squre">
+                        <input type="checkbox" name="chkAll" id="orderInfo_21" value="Y">
+                        <label for="orderInfo_21"></label>
+                    </div>
                 </th>
                 <th scope="col">
                     상품코드
@@ -212,20 +219,23 @@ $(document).ready(function(){
             <tfoot>
             <tr>
                 <td colspan="9">
-                     상품금액 <strong>217,700</strong>원 + 배송비 <strong>0</strong>원 = <strong class="point02">217,700</strong>원
+                     상품금액 <span class="only_english">217,700</span>원 + 배송비 <span class="only_english">0</span>원 = <span class="point02 only_english">217,700</span>원
                 </td>
             </tr>
             </tfoot>
             <tbody>
             <tr>
                 <td>
-                    <input type="checkbox" name="cartChk" value="12532210" class="cartChk0625" title="[GOT7 MINI ALBUM] 상품 선택" style="-webkit-appearance:checkbox;"/>
+                    <div class="choice_wrap type_squre">
+                        <input type="checkbox" name="cartChk" id="orderInfo_22">
+                        <label for="orderInfo_22"></label>
+                    </div>
                 </td>
                 <td>
                     <input type="hidden" name="cartSeq" value="12532210"/>
                     <input type="hidden" name="sellPrdtBcode" value="8809440339266"/>
                     <input type="hidden" name="primeSellPrdtBcode" value="8809440339266"/>
-                    <a class="fs12" href="#n">8809440339266</a>
+                    <a class="fs12 only_english" href="#n">8809440339266</a>
                 </td>
                 <td>
                     <a href="#n"><img src="http://image.kyobobook.co.kr/newimages/music/midi/6525/2525615.jpg" alt="GOT7 MINI ALBUM" class="photo" width="100" height="100" onerror="this.src='http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/no_image2.gif';"/></a>
@@ -233,9 +243,10 @@ $(document).ready(function(){
                 <td class="t_left">
                      GOT7 MINI ALBUM
                 </td>
-                <td>
-                    16,300원<br>
-                    [18%↓]
+                <td >
+                    <span class="only_english">16,300</span>
+                    <span>원</span><br>
+                    <span class="only_english">[18%↓]</span>
                 </td>
                 <td>
                     <!-- 201222 : 작업부분 -->
@@ -247,10 +258,12 @@ $(document).ready(function(){
                     <a href="#n" class="btn_type05_v2 btnChangePrdtCount mgt5">수정</a>
                 </td>
                 <td>
-                    16,300원
+                    <span class="only_english">16,300</span>
+                    <span>원</span>
                 </td>
                 <td>
-                     170원
+                    <span class="only_english">16,300</span>
+                    <span>원</span>
                 </td>
                 <td>
                     <!-- 201222 : 작업부분 -->
@@ -263,13 +276,16 @@ $(document).ready(function(){
             </tr>
             <tr>
                 <td>
-                    <input type="checkbox" name="cartChk" value="12536210" class="cartChk0625" title="[로이텀 미디엄 노트 뮤트 데님] 상품 선택" style="-webkit-appearance:checkbox;"/>
+                    <div class="choice_wrap type_squre">
+                        <input type="checkbox" name="cartChk" id="orderInfo_22">
+                        <label for="orderInfo_22"></label>
+                    </div>
                 </td>
                 <td>
                     <input type="hidden" name="cartSeq" value="12536210"/>
                     <input type="hidden" name="sellPrdtBcode" value="4004117569944"/>
                     <input type="hidden" name="primeSellPrdtBcode" value="2310040795247"/>
-                    <a class="fs12" href="#n">2310040795247</a>
+                    <a class="fs12 only_english" href="#n">2310040795247</a>
                 </td>
                 <td>
                     <a href="#n"><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/goods/100/1883/hot1569470438060.jpg" alt="로이텀 미디엄 노트 뮤트 데님" class="photo" width="100" height="100" onerror="this.src='http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/no_image2.gif';"/></a>
@@ -281,8 +297,9 @@ $(document).ready(function(){
                     </p>
                 </td>
                 <td>
-                    23,400원<br>
-                    [10%↓]
+                    <span class="only_english">16,300</span>
+                    <span>원</span><br>
+                    <span class="only_english">[18%↓]</span>
                 </td>
                 <td>
                     <!-- 201222 : 작업부분 -->
@@ -294,10 +311,12 @@ $(document).ready(function(){
                     <a href="#n" class="btn_type05_v2 btnChangePrdtCount mgt5">수정</a>
                 </td>
                 <td>
-                    23,400원
+                    <span class="only_english">16,300</span>
+                    <span>원</span>
                 </td>
                 <td>
-                     0원
+                    <span class="only_english">16,300</span>
+                    <span>원</span>
                 </td>
                 <td>
                     <!-- 201222 : 작업부분 -->
@@ -309,13 +328,16 @@ $(document).ready(function(){
             </tr>
             <tr>
                 <td>
-                    <input type="checkbox" name="cartChk" value="12594210" class="cartChk0625" title="[PRESENT: YOU & ME EDITION [정규 3집] [리패키지]] 상품 선택" style="-webkit-appearance:checkbox;"/>
+                    <div class="choice_wrap type_squre">
+                        <input type="checkbox" name="cartChk" id="orderInfo_22">
+                        <label for="orderInfo_22"></label>
+                    </div>
                 </td>
                 <td>
                     <input type="hidden" name="cartSeq" value="12594210"/>
                     <input type="hidden" name="sellPrdtBcode" value="8809440338474"/>
                     <input type="hidden" name="primeSellPrdtBcode" value="8809440338474"/>
-                    <a class="fs12" href="#n">8809440338474</a>
+                    <a class="fs12 only_english" href="#n">8809440338474</a>
                 </td>
                 <td>
                     <a href="#n"><img src="http://image.kyobobook.co.kr/newimages/music/midi/7515/2515729.jpg" alt="PRESENT: YOU & ME EDITION [정규 3집] [리패키지]" class="photo" width="100" height="100" onerror="this.src='http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/no_image2.gif';"/></a>
@@ -324,8 +346,9 @@ $(document).ready(function(){
                      PRESENT: YOU & ME EDITION [정규 3집] [리패키지]
                 </td>
                 <td>
-                    17,800원<br>
-                    [19%↓]
+                    <span class="only_english">16,300</span>
+                    <span>원</span><br>
+                    <span class="only_english">[18%↓]</span>
                 </td>
                 <td>
                     <!-- 201222 : 작업부분 -->
@@ -337,10 +360,12 @@ $(document).ready(function(){
                     <a href="#n" class="btn_type05_v2 btnChangePrdtCount mgt5">수정</a>
                 </td>
                 <td>
-                    178,000원
+                    <span class="only_english">16,300</span>
+                    <span>원</span>
                 </td>
                 <td>
-                     1,800원
+                    <span class="only_english">16,300</span>
+                    <span>원</span>
                 </td>
                 <td>
                     <!-- 201222 : 작업부분 -->
@@ -359,9 +384,9 @@ $(document).ready(function(){
             <!-- 201222 : 작업부분 -->
             <colgroup>
             <col style="width:5%">
-            <col style="width:10%">
             <col style="width:12%">
-            <col style="width:23%">
+            <col style="width:12%">
+            <col style="width:21%">
             <col style="width:10%">
             <col style="width:12%">
             <col style="width:10%">
@@ -371,7 +396,10 @@ $(document).ready(function(){
             <thead>
             <tr>
                 <th scope="col" class="fir">
-                    <input type="checkbox" name="chkAll" value="cartChk12885" title="업체개별 배송 상품 전체 선택" style="-webkit-appearance:checkbox;"/>
+                    <div class="choice_wrap type_squre">
+                        <input type="checkbox" name="chkAll" id="orderInfo_21" value="Y">
+                        <label for="orderInfo_21"></label>
+                    </div>
                 </th>
                 <th scope="col">
                     상품코드
@@ -402,20 +430,23 @@ $(document).ready(function(){
             <tfoot>
             <tr>
                 <td colspan="9">
-                     상품금액 <strong>156,000</strong>원 + 배송비 <strong>0</strong>원 = <strong class="point02">156,000</strong>원
+                     상품금액 <span class="only_english">156,000</span>원 + 배송비 <span class="only_english">0</span>원 = <span class="point02 only_english">156,000</span>원
                 </td>
             </tr>
             </tfoot>
             <tbody>
             <tr>
                 <td>
-                    <input type="checkbox" name="cartChk" value="12533210" class="cartChk12885" title="[[삼성전자] 갤럭시버즈 블루투스 이어폰] 상품 선택" style="-webkit-appearance:checkbox;"/>
+                    <div class="choice_wrap type_squre">
+                        <input type="checkbox" name="cartChk" id="orderInfo_22">
+                        <label for="orderInfo_22"></label>
+                    </div>
                 </td>
                 <td>
                     <input type="hidden" name="cartSeq" value="12533210"/>
                     <input type="hidden" name="sellPrdtBcode" value="2310040319115"/>
                     <input type="hidden" name="primeSellPrdtBcode" value="2310040307839"/>
-                    <a class="fs12" href="#n">2310040307839</a>
+                    <a class="fs12 only_english" href="#n">2310040307839</a>
                 </td>
                 <td>
                     <a href="#n"><img src="http://image.kyobobook.co.kr/newimages/giftshop_new/goods/100/1690/hot1553670797576.jpg" alt="[삼성전자] 갤럭시버즈 블루투스 이어폰" class="photo" width="100" height="100" onerror="this.src='http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/no_image2.gif';"/></a>
@@ -424,8 +455,9 @@ $(document).ready(function(){
                      [삼성전자] 갤럭시버즈 블루투스 이어폰 <a href="javascript:;" class="txt_option">블랙</a>
                 </td>
                 <td>
-                    156,000원<br>
-                    [2%↓]
+                    <span class="only_english">16,300</span>
+                    <span>원</span><br>
+                    <span class="only_english">[18%↓]</span>
                 </td>
                 <td>
                     <!-- 201222 : 작업부분 -->
@@ -438,10 +470,12 @@ $(document).ready(function(){
                     <!--// 201222 : 작업부분 -->
                 </td>
                 <td>
-                    156,000원
+                   <span class="only_english">16,300</span>
+                    <span>원</span><br>
                 </td>
                 <td>
-                     0원
+                   <span class="only_english">16,300</span>
+                    <span>원</span><br>
                 </td>
                 <td>
                     <!-- 201222 : 작업부분 -->
@@ -491,7 +525,7 @@ $(document).ready(function(){
                 <!-- <a href="#n" id="btnGoOrderAllCartProduct" class="btn_red50">주문하기</a> -->
                 </span>
             </div>
-            <div class="pdt40 c_both">
+            <div class="pdt40 c_both list_ptop">
                 <ul class="list_type02_v2 fs14">
                     <li>상품 배송비는 핫트랙스 배송, 업체개별 배송으로 구분되어 적용됩니다.</li>
                     <li>쿠폰 또는 통합포인트 사용 시 예상 적립 통합포인트가 변동될 수 있습니다.</li>
