--- a/PC/html/new/orderComplete.html
+++ b/PC/html/new/orderComplete.html
@@ -199,10 +199,8 @@ $(document).ready(function(){
 	            <tr> 
 	                <th scope="row">주소</th> 
 	                <td colspan="3" class="fs14 c_black">
-	                    
-	                        108-81<br />
-	                     
-	                    <div class="w01">경기 파주시 회동길 78  교보핫트랙스 </div>
+	                    <p class="p_lineh mgt5 c_black fs14">108-81</p>
+	                    <div class="p_lineh w01">경기 파주시 회동길 78  교보핫트랙스 </div>
 	                </td>
 	            </tr> 
 	            <tr> 
