--- a/MOBILE/html/new/popup_point_gs.html
+++ b/MOBILE/html/new/popup_point_gs.html
@@ -77,7 +77,7 @@
 					<div class="f_r">						
 	                    <span class="choice_wrap have_inner_txt between_space">
 	                        <span class="choice_wrap_inner">
-	                            <input type="radio" name="orderInfo2" id="orderInfo_102" value="Y">
+	                            <input type="checkbox" name="orderInfo2" id="orderInfo_102" value="Y">
 	                            <label for="orderInfo_102">포인트 전체 사용</label>
 	                        </span>
 	                    </span>
@@ -89,7 +89,7 @@
                     </div>
                     <div class="choice_wrap type_squre have_inner_txt margin_set_top">
                         <div class="choice_wrap_inner">
-                            <input type="radio" name="orderInfo1" id="orderInfo_101" value="Y">
+                            <input type="checkbox" name="orderInfo1" id="orderInfo_101" value="Y">
                             <label for="orderInfo_101">GS&amp;POINT 적립 신청하기</label>
                         </div>
                     </div>
