--- a/PC/html/new/orderSheet_member.html
+++ b/PC/html/new/orderSheet_member.html
@@ -1163,7 +1163,7 @@
                                                 <dt>사용포인트</dt>
                                                 <dd>
                                                     <div class="input_wrap">
-                                                        <input type="text" placeholder="0p" class="width_points only_english">
+                                                        <input type="text" placeholder="0P" class="width_points only_english">
                                                     </div>
                                                 </dd>
                                             </dl>
@@ -1228,14 +1228,14 @@
                                                 <dt>사용포인트</dt>
                                                 <dd>
                                                     <div class="input_wrap">
-                                                        <input type="text" placeholder="0p" class="width_points only_english">
+                                                        <input type="text" placeholder="0P" class="width_points only_english">
                                                     </div>
                                                 </dd>
                                             </dl>
                                             <div class="border_sum">
                                                 <div class="choice_wrap type_squre">
-                                                    <input type="checkbox" name="orderInfo999" id="orderInfo_91" value="Y">
-                                                    <label for="orderInfo_91">L.POINT 적립 신청하기</label>
+                                                    <input type="checkbox" name="orderInfo999" id="orderInfo_92" value="Y">
+                                                    <label for="orderInfo_92">L.POINT 적립 신청하기</label>
                                                 </div>
                                             </div>
                                             <div class="btn_bottom_box">
@@ -1294,14 +1294,14 @@
                                                 <dt>사용포인트</dt>
                                                 <dd>
                                                     <div class="input_wrap">
-                                                        <input type="text" placeholder="0p" class="width_points only_english">
+                                                        <input type="text" placeholder="0P" class="width_points only_english">
                                                     </div>
                                                 </dd>
                                             </dl>
                                             <div class="border_sum">
                                                 <div class="choice_wrap type_squre">
-                                                    <input type="checkbox" name="orderInfo999" id="orderInfo_91" value="Y">
-                                                    <label for="orderInfo_91">OK캐쉬백 적립 신청하기</label>
+                                                    <input type="checkbox" name="orderInfo999" id="orderInfo_93" value="Y">
+                                                    <label for="orderInfo_93">OK캐쉬백 적립 신청하기</label>
                                                 </div>
                                             </div>
                                             <div class="btn_bottom_box">
